--- a/views/entries.ejs
+++ b/views/entries.ejs
@@ -10,19 +10,22 @@
 
 <body>
     <% include menu %>
-        <% entries.forEach(entry =>{ %>
-            <div class="entry">
-                <h3>
-                    <%= entry.title %>
-                </h3>
-                <p>
-                    <%= entry.body %>
-                </p>
-                <p>Posted by
-                    <%= entry.username %>
-                </p>
-            </div>
-            <%   }) %>
+        <% if(locals.page) {%>
+            <span class="name"><%= locals.page.total %> </span>
+            <% } %>
+                <% entries.forEach(entry =>{ %>
+                    <div class="entry">
+                        <h3>
+                            <%= entry.title %>
+                        </h3>
+                        <p>
+                            <%= entry.body %>
+                        </p>
+                        <p>Posted by
+                            <%= entry.username %>
+                        </p>
+                    </div>
+                    <%   }) %>
 </body>
 
 </html>
